Adding metadata in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,30 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/millennium.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Planner</title>
+
+    <title>EriduOps – Blue Archive Student Planner</title>
+
+    <!-- SEO Meta -->
+    <meta name="description" content="EriduOps is a free student planner to manage bond ranks, 
+    calculate material needs, and track item inventory across Blue Archive students. No logins 
+    or ads — your data stays in your browser, with import/export support for backup and sharing." />
+
+    <!-- Open Graph (Facebook, Discord, etc.) -->
+    <meta property="og:title" content="EriduOps – Blue Archive Student Planner" />
+    <meta property="og:description" content="EriduOps is a free student planner to manage bond ranks, 
+    calculate material needs, and track item inventory across Blue Archive students. No logins 
+    or ads — your data stays in your browser, with import/export support for backup and sharing." />
+    <meta property="og:image" content="/preview.png" />
+    <meta property="og:url" content="https://eriduops.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="EriduOps – Blue Archive Student Planner" />
+    <meta name="twitter:description" content="EriduOps is a free student planner to manage bond ranks, 
+    calculate material needs, and track item inventory across Blue Archive students. No logins 
+    or ads — your data stays in your browser, with import/export support for backup and sharing." />
+    <meta name="twitter:image" content="/preview.png" />
   </head>
   <body>
     <div id="app"></div>
