Fixing image url in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="EriduOps is a free student planner to manage bond ranks, 
     calculate material needs, and track item inventory across Blue Archive students. No logins 
     or ads — your data stays in your browser, with import/export support for backup and sharing." />
-    <meta property="og:image" content="/preview.png" />
+    <meta property="og:image" content="https://eriduops.com/preview.png" />
     <meta property="og:url" content="https://eriduops.com" />
     <meta property="og:type" content="website" />
 
@@ -27,7 +27,7 @@
     <meta name="twitter:description" content="EriduOps is a free student planner to manage bond ranks, 
     calculate material needs, and track item inventory across Blue Archive students. No logins 
     or ads — your data stays in your browser, with import/export support for backup and sharing." />
-    <meta name="twitter:image" content="/preview.png" />
+    <meta name="twitter:image" content="https://eriduops.com/preview.png" />
   </head>
   <body>
     <div id="app"></div>
