chore: update README, meta tags, and public assets

--- a/index.html
+++ b/index.html
@@ -2,32 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/millennium.ico" />
+    <link rel="icon" type="image/x-icon" href="/millennium.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>EriduOps – Blue Archive Student Planner</title>
 
     <!-- SEO Meta -->
-    <meta name="description" content="EriduOps is a free student planner to manage bond ranks, 
-    calculate material needs, and track item inventory across Blue Archive students. No logins 
-    or ads — your data stays in your browser, with import/export support for backup and sharing." />
+    <meta name="description" content="EriduOps is a free Blue Archive student planner — track bond levels, skill upgrades, gear progression, and material costs across all students. No logins or ads; your data stays in your browser with import/export support." />
 
     <!-- Open Graph (Facebook, Discord, etc.) -->
     <meta property="og:title" content="EriduOps – Blue Archive Student Planner" />
-    <meta property="og:description" content="EriduOps is a free student planner to manage bond ranks, 
-    calculate material needs, and track item inventory across Blue Archive students. No logins 
-    or ads — your data stays in your browser, with import/export support for backup and sharing." />
-    <meta property="og:image" content="https://eriduops.com/preview.png" />
+    <meta property="og:description" content="EriduOps is a free Blue Archive student planner — track bond levels, skill upgrades, gear progression, and material costs across all students. No logins or ads; your data stays in your browser with import/export support." />
+    <meta property="og:image" content="https://eriduops.com/preview.png?v=2" />
     <meta property="og:url" content="https://eriduops.com" />
     <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="ja_JP" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="EriduOps – Blue Archive Student Planner" />
-    <meta name="twitter:description" content="EriduOps is a free student planner to manage bond ranks, 
-    calculate material needs, and track item inventory across Blue Archive students. No logins 
-    or ads — your data stays in your browser, with import/export support for backup and sharing." />
-    <meta name="twitter:image" content="https://eriduops.com/preview.png" />
+    <meta name="twitter:description" content="EriduOps is a free Blue Archive student planner — track bond levels, skill upgrades, gear progression, and material costs across all students. No logins or ads; your data stays in your browser with import/export support." />
+    <meta name="twitter:image" content="https://eriduops.com/preview.png?v=2" />
   </head>
   <body>
     <div id="app"></div>
